@@ -33,6 +33,7 @@
 	<category label="$LOCALIZE[10038]">
 		<setting id="preferredsize" label="32902" type="labelenum" default="1920x1080" values="1920x1080|1280x720" />
 		<setting id="highquality_preview" label="32903" type="bool" default="false" />
+		<setting id="only_filesystem" label="32904" type="bool" default="false" />
 		<!-- For add-on inner workings -->
 		<setting id="lastalldate" type="text" default="0" visible="false" />
 		<setting id="lastunprocesseddate" type="text" default="0" visible="false" />
